# canadian-econ-monitor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_everything.sh
etl/: init_mysql.py
etl/extractors/: main_extractor.py
etl/loaders/: main_loader.py
etl/transformers/: main_transformer.py
sql/: schema.sql
streamlit_app/: app.py  db_utils.py
